# opencv_project_template

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: packages.cmake  toolchain-x86_64-MSVC.cmake
operate/: TextDrawer.h  showImagesInGrid.cpp  showImagesInGrid.h
